Fixed video path and navbar auto-close on mobile

--- a/style.css
+++ b/style.css
@@ -51,7 +51,10 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+ 
+}
+.hamburger {
+  display: block;
 }
 .navbar {
   display: flex;
@@ -166,6 +169,12 @@ body {
     background-color: #000;
     width: 200px;
   }
+  .navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
 }
 
 .logo {
@@ -178,7 +187,7 @@ body {
   display: block;        
 }
 .nav-links {
-  list-style: none;
+  list-style:;
   display: flex;
 
 }.nav-links li a {
